--- a/package.json
+++ b/package.json
@@ -10,22 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-collapsible": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.6",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "flexlayout-react": "^0.8.1",
     "lucide": "^0.473.0",
     "lucide-react": "^0.473.0",
-    "rc-dock": "^3.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.6.0"
+    "scheduler": "^0.25.0",
+    "threejs-chunk-viewport": "file:src/viewport-renderers/threejs-chunk-viewport"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -41,5 +32,13 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
+  },
+  "workspaces": [
+    "viewport-renderers/*"
+  ],
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
